--- a/src/scss/utilities/_wrapper-home.scss
+++ b/src/scss/utilities/_wrapper-home.scss
@@ -1,6 +1,9 @@
+.wrapper--home {
+    width: 100%;
+}
+
 @include media-query('md') {
     .wrapper--home {
-        width: 100%;
         max-width: 39rem;
     }
 }
